--- a/Abgaben/Abgabe2/preamble.tex
+++ b/Abgaben/Abgabe2/preamble.tex
@@ -78,3 +78,14 @@
 sensitive=true,
 morekeywords={TABLE, ON, UPDATE, DELETE, CREATE, OPERATOR, FUNCTION, SELECT,DISTINCT, FROM, WHERE, FILTER, ORDER, GROUP, BY, HAVING, IN, AS, CONSTRAINT, GRAPH, SERVICE, PREFIX, ASC, DESC, LIMIT, SUM, MIN, MAX}
 }
+\lstset{basicstyle=\ttfamily}
+\lstset{literate=%
+  {Ö}{{\"O}}1
+  {Ä}{{\"A}}1
+  {Ü}{{\"U}}1
+  {ß}{{\ss}}1
+  {ü}{{\"u}}1
+  {ä}{{\"a}}1
+  {ö}{{\"o}}1
+} % für Umlaute in lstlistings
+\lstset{language=Python,upquote=true}
