Add date of testat to titlepage.tex

--- a/Abgaben/Abgabe2/titlepage.tex
+++ b/Abgaben/Abgabe2/titlepage.tex
@@ -30,7 +30,7 @@
 
     \begin{flushright}
 
-        \Large{\textbf{Termin 2.Testat:}} ~\Large{tba}
+        \Large{\textbf{Termin 2.Testat:}} ~\Large{02. Juli 2020}
     \end{flushright}
 
 \end{titlepage}
